Add joystix font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>shmup.re</title>
     <style>
+        @font-face {
+          font-family: "Joystix";
+          src: url("./assets/joystix.otf");
+        }
         html,body { height:100%; }
         body { background:#001; display:flex; justify-content:center; align-items:center; }
         canvas { display:block; border:1px solid #333; }
